# pos2

./: .dockerignore  .envrc.template  .gitignore  .gitmodules  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile.caddy  Dockerfile.dockerloaded  Dockerfile.dockerloader  Dockerfile.dockerloader.ci  Dockerfile.tunnel  Dockerfile.tunnel-test  Dockerfile.wasi3experiment  Dockerfile.wasi3experiment.ci  README.md  TODO.md  claude.md  compose.yaml  flake.nix  local-setup.sh  setup-caddy.sh  shell.nix  test-dockerloader.sh  test.sh  update.sh
.cargo/: config.toml
.github/workflows/: combined.yml  main.yml  supervisor.yml
dockerloaded/: Cargo.toml
dockerloaded/src/: main.rs
dockerloader/: Cargo.toml  README.md
dockerloader-bundler/: Cargo.toml
dockerloader-bundler/src/: main.rs
dockerloader-testapp/: Cargo.toml
dockerloader-testapp/src/: main.rs
dockerloader/src/: lib.rs  main.rs
dockerloader/tests/: dockerloader_test.rs
innerapp/: Cargo.toml
jank/: go.mod  main.go
loader/: Cargo.toml
loader/src/: main.rs
replsqlite/: Cargo.toml  README.md  try.sh
replsqlite/src/: lib.rs  main.rs
replsqlite/src/replvfs/: file.rs  mem_file.rs  mod.rs  structs.rs  vol_file.rs
scripts/: install.sh  setup.sh
selfupdater/: Cargo.toml  Dockerfile  multi-arch-build.sh  ps.sh  test.sh  update.sh
selfupdater/src/: docker.rs  lib.rs  main.rs  storage.rs
selfupdater/tests/: integration.rs
server/: Cargo.toml  build.sh  diesel.toml  run-debug.sh  run-release.sh
server/migrations/2025-06-01-233021_create_repository_apps/: down.sql  up.sql
server/migrations/2025-06-02-041300_create_sessions/: down.sql  up.sql
server/migrations/2025-06-02-193617_add_user_apps/: down.sql  up.sql
server/migrations/2025-06-03-043121_add_user_app_version/: down.sql  up.sql
server/src/: main.rs  models.rs
sqlite-plugin/: Cargo.toml  README.md
sqlite-plugin/src/: flags.rs  vfs.rs
testjsapp/: .gitignore  app.json  build.sh  package-lock.json  package.json  test.js
testpyapp/: .gitignore  app.py  build.sh  generate-bindings.sh
testrustapp/: Cargo.toml  app.json  build.sh  deploy.sh
testrustapp/src/: bindings.rs  lib.rs
tunnel/: .gitignore  Cargo.toml  README.md  test.dnsmasq.conf
tunnel/src/: cert.rs  client.rs  common.rs  conn_handler.rs  db.rs  dnsserver.rs  lib.rs  main.rs  server.rs  setup.rs  sni_router.rs  timeout_stream.rs  web.rs
tunnel/src/entity/: auth_tokens.rs  device_tokens.rs  dns_records.rs  mod.rs  prelude.rs  schema_version.rs  sessions.rs  user_domains.rs  users.rs
tunnel/testing/client/: config.json
tunnel/testing/server/: config.json.base
tunnel/tests/: device_flow_test.rs  tunnel_end_to_end_test.rs
tunnel/tests/common/: mod.rs
wasi3app/: Cargo.toml  deploy.sh  steps.md
wasi3app/src/: lib.rs
wasi3app/src/wasip3_http_wrapper/: README.md  mod.rs
wasi3app/src/wasip3_http_wrapper/wasip3_http_ext/: body_writer.rs  mod.rs
wasi3experiment/: Cargo.toml
wasi3experiment/src/: generated.rs  main.rs  sqlite.rs  wasmtimewrapper.rs
wasi3experiment/tests/: cli_setup.rs
wit/: world.wit
wit-new/: world.wit
