[workspace]
resolver = "3"
members = ["sqlite-plugin", "replsqlite", "selfupdater", "tunnel", "wasi3experiment", "wasi3app"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
axum = { version = "0.8.6", default-features = false }
axum-extra = "0.10.1"
axum-server = "0.7.2"
axum-streams = "0.24.0"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "2.0.1"
bindgen = { version = "0.72", default-features = false }
bollard = "0.19.2"
bytes = "1.10.1"
chrono = "0.4.42"
clap = "4.5.42"
cookie = "0.18.1"
culprit = "0.4.0"
enum_dispatch = "0.3.13"
futures = "0.3.31"
futures-core = "0.3.31"
generic-array = "1.2.0"
hickory-proto = "0.25.2"
hickory-resolver = "0.25.2"
hickory-server = "0.25.2"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-rustls = "0.27.6"
hyper-util = "0.1.13"
inquire = "0.7.5"
instant-acme = { version = "0.8.3", default-features = false }
itertools = "0.14.0"
lazy_static = "1.5.0"
maud = "0.27.0"
oauth2 = "5.0.0"
oci-client = "0.15.0"
oci-spec = "0.8.2"
once_cell = "1.21.3"
pin-project-lite = "0.2.16"
quinn = "0.11.8"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rand = "0.9.2"
reqwest = "0.12.24"
rustix = "1.1.2"
rustls = "0.23.27"
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.6.0"
rustls-webpki = "0.103.3"
sea-orm = "1.1.13"
selfupdater = { path = "selfupdater" }
serde = "1.0.228"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sqlite-plugin = { path = "sqlite-plugin" }
strum = "0.27.1"
test-log = "0.2.18"
thiserror = "2.0.17"
time = "0.3.41"
tokio = "1.48.0"
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
toml = "0.9.8"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tryiter = "0.6.0"
tunnel = { path = "tunnel" }
urlencoding = "2.1.3"
uuid = "1.18.1"
wasip3 = "0.2.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main" }
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main" }
webpki = "0.22.4"
wit-bindgen = "0.46.0"
wit-bindgen-core = "0.46.0"
x509-parser = "0.17.0"
zerocopy = "0.8.27"
parking_lot = "0.12.5"
rusqlite = "0.32.0"
webauthn-rs = "0.5.3"

[patch.crates-io]
wit-bindgen = { git = "https://github.com/jellevandenhooff/wit-bindgen.git", rev = "cd680eee4c80b232709d7ef6051bb1a330164272" } # path = "../wit-bindgen/crates/guest-rust" }
wit-bindgen-core = { git = "https://github.com/jellevandenhooff/wit-bindgen.git", rev = "cd680eee4c80b232709d7ef6051bb1a330164272" } # path = "../wit-bindgen/crates/guest-rust" }
