[package]
name = "dockerloaded"
version = "0.1.0"
edition = "2024"

[dependencies]
dockerloader = { workspace = true }
anyhow.workspace = true
nix.workspace = true
oci-client = { workspace = true, features = ["rustls-tls"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
