[package]
name = "dockerloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["http1", "tokio"] }
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
futures.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client"] }
hyper-util.workspace = true
nix.workspace = true
oci-client = { workspace = true, features = ["rustls-tls"] }
serde_json.workspace = true
serial_test = "3.2.0"
tar = "0.4.44"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
