[package]
name = "dockerloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["http1", "tokio"] }
flate2 = { workspace = true, features = ["zlib-rs"] }
futures.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client"] }
hyper-util.workspace = true
nix.workspace = true
oci-client = { workspace = true, features = ["rustls-tls"] }
serde_json.workspace = true
serial_test = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
