[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
oci-distribution = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tar = "0.4.44"
tempdir = "0.3.7"
tokio = { version = "1.47.1", features = ["full", "rt"] }
