[package]
name = "replsqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["tokio"] }
base64 = "0.22.1"
bytes = "1.10.1"
culprit = "0.4.0"
enum_dispatch = "0.3.13"
parking_lot = "0.12.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rusqlite = { version = "0.32.0", features = ["blob", "bundled", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlite-plugin = { path = "../sqlite-plugin" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tryiter = "0.6.0"
uuid = { version = "1.18.1", features = ["v4"] }
zerocopy = { version = "0.8.27", features = ["derive"] }

[lib]
name = "extension"
crate-type = ["cdylib"]

