[package]
name = "replsqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["tokio"] }
base64 = { workspace = true }
bytes = { workspace = true }
culprit = { workspace = true }
enum_dispatch = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rusqlite = { workspace = true, features = ["blob", "bundled", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlite-plugin = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tryiter = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zerocopy = { workspace = true, features = ["derive"] }

[lib]
name = "extension"
crate-type = ["cdylib"]

