[package]
name = "selfupdater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
oci-client = { workspace = true }
oci-spec = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "serde_json"] }
rustix = { workspace = true, features = ["system"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
