[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
cookie = "0.18.1"
docker_credential = "1.3.2"
generic-array = "1.2.0"
maud = "0.27.0"
oci-client = "0.15.0"
oci-spec = "0.8.1"
oci-wasm = "0.3.0"
once_cell = "1.21.3"
rand = { version = "0.9.1", features = ["os_rng"] }
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["json"] }
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
wasmtime = { version = "33.0.0", features = ["component-model", "runtime"] }
wasmtime-wasi = "33.0.0"
