[package]
name = "sqlite-plugin"
edition = "2024"
authors = []
license = "MIT OR Apache-2.0"
rust-version = "1.85"

description = "A Rust crate for building a custom SQLite virtual file system (VFS)."
keywords = ["sqlite", "vfs", "extension"]

[lints.clippy]
disallowed_methods = "deny"
uninlined-format-args = "warn"
doc-markdown = "warn"
map-unwrap-or = "warn"

[dev-dependencies]
rusqlite = { workspace = true, features = ["blob", "trace", "bundled"] }
parking_lot = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[features]
default = []
