[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
backoff = "0.4.0"
bincode = "2.0.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
cookie = "0.18.1"
futures = "0.3.31"
generic-array = "1.2.0"
hickory-proto = { version = "0.25.2", features = ["serde"] }
hickory-resolver = "0.25.2"
hickory-server = "0.25.2"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "server", "http1"] }
hyper-rustls = { version = "0.27.6", features = ["ring"] }
hyper-util = { version = "0.1.13", features = ["http1", "http2", "server", "server-auto", "tokio"] }
inquire = "0.7.5"
instant-acme = { git = "https://github.com/djc/instant-acme.git", version = "0.8.0", features = ["hyper-rustls", "ring", "time", "x509-parser"], default-features = false }
maud = "0.27.0"
oauth2 = "5.0.0"
once_cell = "1.21.3"
pin-project-lite = "0.2.16"
quinn = "0.11.8"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["chrono"] }
rustls = "0.23.27"
rustls-pki-types = "1.12.0"
rustls-platform-verifier = "0.6.0"
rustls-webpki = "0.103.3"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
strum = { version = "0.27.1", features = ["derive"] }
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-rustls = "0.26.2"
tokio-util = "0.7.15"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
webpki = "0.22.4"
x509-parser = "0.17.0"
