[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, default-features = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie", "typed-header"] }
axum-server = { workspace = true, features = ["tls-rustls"] }
backoff = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cookie = { workspace = true }
futures = { workspace = true }
generic-array = { workspace = true }
hickory-proto = { workspace = true, features = ["serde"] }
hickory-resolver = { workspace = true }
hickory-server = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "server", "http1"] }
hyper-rustls = { workspace = true, features = ["ring"] }
hyper-util = { workspace = true, features = ["http1", "http2", "server", "server-auto", "tokio"] }
inquire = { workspace = true }
instant-acme = { workspace = true, features = ["hyper-rustls", "ring", "time", "x509-parser"] }
maud = { workspace = true }
oauth2 = { workspace = true }
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rusqlite = { workspace = true, features = ["chrono"] }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-platform-verifier = { workspace = true }
rustls-webpki = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
strum = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
webpki = { workspace = true }
x509-parser = { workspace = true }
