[package]
name = "wasi3app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", default-features = false, features = ["json", "macros"] }
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.7.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
tokio-stream = "0.1.17"
tower-service = "0.3.3"
wasip3 = "0.2.0"
wit-bindgen = "0.46.0"
wit-bindgen-core = "0.46.0"

[lib]
crate-type = ["cdylib"]
