[package]
name = "wasi3app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "macros"] }
axum-streams = { workspace = true, features = ["json"] }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
maud = { workspace = true, features = ["axum"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tower-service = { workspace = true }
wasip3 = { workspace = true }
wit-bindgen = { workspace = true }
wit-bindgen-core = { workspace = true }

[lib]
crate-type = ["cdylib"]
