[package]
name = "wasi3experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bytes = "1.10.1"
futures = "0.3.31"
futures-core = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
parking_lot = "0.12.5"
rusqlite = { version = "0.32.0", features = ["blob", "bundled", "trace"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main", features = ["component-model-async", "component-model-async-bytes"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git",  branch = "main",features = ["p2", "p3"]}
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime.git",  branch = "main",features = ["p3"] }
