[package]
name = "wasi3experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
maud = { workspace = true, features = ["axum"] }
parking_lot = { workspace = true }
rusqlite = { workspace = true, features = ["blob", "bundled", "trace"] }
rustls = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true, features = ["component-model-async", "component-model-async-bytes"] }
wasmtime-wasi = { workspace = true, features = ["p2", "p3"] }
wasmtime-wasi-http = { workspace = true, features = ["p3"] }
tunnel = { workspace = true } # is there a better way to include a workspace thing?
